# simple_ncbi_taxonomy

./: README.md  pyproject.toml
src/: taxids_to_pplacer.py
src/simple_ncbi_taxonomy/: __init__.py  load_data.py  taxonomy.py
tests/: test_load.py
