[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_ncbi_taxonomy"
version = "0.1.0"
description = "A simple Python package for parsing the NCBI taxonomy"
authors = [
    { name = "Rob Edwards", email = "raedwards@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0"  # optional, for property-based testing
]

[tool.pytest.ini_options]
# Where pytest should look for tests
testpaths = ["tests"]
# Ensure the src directory is on the Python path
pythonpath = ["src"]
# Show extra summary info for test failures
addopts = "-ra -q"

[tool.setuptools.packages.find]
where = ["src"]

